fix(user-search-results): truncate search results user details

--- a/src/components/messenger/list/user-search-results/user-search-results.scss
+++ b/src/components/messenger/list/user-search-results/user-search-results.scss
@@ -37,6 +37,8 @@
     flex-direction: column;
     align-items: flex-start;
     flex: 1 0 0;
+    overflow: hidden;
+    width: 100%;
   }
 
   &__label {
@@ -47,6 +49,7 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    width: 100%;
   }
 
   &__sub-label {
@@ -54,5 +57,9 @@
 
     font-size: 10px;
     line-height: 14px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 100%;
   }
 }
